z-index issue

--- a/css/child.sass
+++ b/css/child.sass
@@ -61,6 +61,7 @@ section
 			position: absolute
 			top: -8px
 			right: -8px
+			z-index: 9
 	&#hero
 		h1
 			font-size: 52px
